force-app/main/default/objects/Fulfillment__c/Fulfillment__c.object-meta.xml
<CustomObject>
    <description>This object will hold the fulfillment information for Training and Credits. The data in this object is used to create Invoices and Credit Memos (CC Invoice records).</description>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>