force-app/main/default/objects/Fulfillment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>CC Order Account Name</description>
    <formula>Order__r.ccrz__Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>