force-app/main/default/objects/Fulfillment__c/fields/CC_Transaction_Payment__c.field-meta.xml
<CustomField>
    <fullName>CC_Transaction_Payment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CC Transaction Payment</label>
    <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>