force-app/main/default/objects/Fulfillment__c/fields/CC_Transaction_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Transaction_Payment_Date__c</fullName>
    <description>CC Transaction Payment Created Date</description>
    <formula>CC_Transaction_Payment__r.CreatedDate</formula>
    <inlineHelpText>CC Transaction Payment Created Date</inlineHelpText>
    <label>CC Transaction Payment Date</label>
    <type>Date</type>
</CustomField>