force-app/main/default/objects/Fulfillment__c/fields/Channel_Formula__c.field-meta.xml
<CustomField>
    <fullName>Channel_Formula__c</fullName>
    <formula>CASE(  FOCIS_Category__c  , 
&#39;42&#39;, &#39;FS&#39;, 
&#39;43&#39;, &#39;AP/LTP&#39;, 
&#39;45&#39;, &#39;CPS&#39;, 
&#39;46&#39;, &#39;COM-RCO&#39;, 
&#39;47&#39;, &#39;COM-ITM&#39;, 
&#39;48&#39;, &#39;COM-RCO&#39;, 
&#39;Other&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Formula</label>
    <type>Text</type>
</CustomField>