force-app/main/default/objects/Fulfillment__c/fields/Open_Fulfillment_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_Fulfillment_Items__c</fullName>
    <description>Calculates the number of Fulfillment Item records with Status equal to &#39;Ready&#39; or &#39;In Progress&#39;</description>
    <inlineHelpText>Number of Fulfillment Item records with Status set to &#39;Ready&#39; or &#39;In Progress&#39;</inlineHelpText>
    <label>Open Fulfillment Items</label>
    <summaryFilterItems>
        <field>Fulfillment_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>In Progress, Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>Fulfillment_Item__c.Fulfillment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>