force-app/main/default/objects/Fulfillment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>CC Transaction Payment - Account Type</description>
    <formula>CC_Transaction_Payment__r.ccrz__AccountType__c</formula>
    <inlineHelpText>CC Transaction Payment - Account Type</inlineHelpText>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>