force-app/main/default/objects/Fulfillment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>CC Transaction Payment - Payment Type</description>
    <formula>CC_Transaction_Payment__r.ccrz__PaymentType__c</formula>
    <inlineHelpText>CC Transaction Payment - Payment Type</inlineHelpText>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>