force-app/main/default/objects/Fulfillment__c/fields/Supplemental_Information__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Information__c</fullName>
    <description>Supplemental Information to be printed on invoice</description>
    <label>Supplemental Information</label>
    <length>50</length>
    <type>Text</type>
</CustomField>