force-app/main/default/objects/Fulfillment__c/fields/Transaction_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference_ID__c</fullName>
    <formula>CC_Transaction_Payment__r.Merchant_Reference_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Reference ID</label>
    <type>Text</type>
</CustomField>